--- a/app/src/main/res/layout/dg_st_item.xml
+++ b/app/src/main/res/layout/dg_st_item.xml
@@ -83,6 +83,17 @@
         android:textColor="@color/colorPrimary"
         android:background="@color/colorWhite"/>
 
+    <Button android:id="@+id/btnAddItemSub"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_item_sub"
+        android:textSize="@dimen/button_text_size_small"
+        android:background="@drawable/accent_button"
+        android:textColor="@color/colorPrimary"
+        android:textAllCaps="false"
+        android:padding="10dp"
+        android:layout_marginTop="10dp"/>
+
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
