--- a/app/src/main/res/layout/dg_taste.xml
+++ b/app/src/main/res/layout/dg_taste.xml
@@ -53,7 +53,9 @@
             android:textStyle="bold"
             android:textSize="@dimen/label_text_size_large"
             android:hint="Custom Taste"
-            android:background="@color/colorDarkGray"/>
+            android:background="@color/colorDarkGray"
+            android:inputType="text"
+            android:imeOptions="actionDone"/>
 
         <customfont.ArialButton android:id="@+id/btnTasteAdd"
             android:layout_width="wrap_content"
